fix vertical collapsing by adding a margin of zero to h1.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   color: #3a3a3a;
 }
 
+
 a {
   color: #fff;
   text-decoration: none;
@@ -18,6 +19,12 @@ a {
     Base Layout Styles
    ========================================================================== */
 
+/* ---- Navigation ---- */
+
+.name {
+  margin: 0;
+}
+
 /* ---- Layout Containers ---- */
 
 .wrapper {
@@ -27,6 +34,7 @@ a {
 
 .main-header {
   background: #3acec2;
+  padding: 1em 0;
 }
 
 .main-footer {
